--- a/odas-ui/src/Layout/Reports.css
+++ b/odas-ui/src/Layout/Reports.css
@@ -3,8 +3,10 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    width: auto;
-    height: 100%
+    position: fixed;
+    height: 100vh;
+    width: 100vw;
+    overflow-y: scroll;
 }
 
 /*Card formatting*/
