--- a/odas-ui/src/Layout/Sidebar.css
+++ b/odas-ui/src/Layout/Sidebar.css
@@ -1,6 +1,6 @@
 /*Sidebar container*/
 .sidebar {
-    height: 86vh;
+    height: 88vh;
     width: 22em;
     z-index: auto;
     left: 0;
